--- a/src/components/sidebarCart/SidebarCart.scss
+++ b/src/components/sidebarCart/SidebarCart.scss
@@ -25,7 +25,7 @@
     top: 0;
     right: 0;
     width: 400px;
-    height: 100vh;
+    height: 100dvh;
     background-color: $white;
     box-shadow: $shadow-2xl;
     z-index: 1000;
